--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
-< !DOCTYPE html>
+<!DOCTYPE html>
 <html>
    <head>
+       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
        <meta charset="utf-8" />
        <title>MCDS tv</title>
+       <script src="https://kit.fontawesome.com/ffaa7f6069.js" crossorigin="anonymous"></script>
        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+       <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+       <link rel="stylesheet" href="./css/styles.css"/>
    </head>
    <body>
-       <p>
-         Hello world!
-       </p>
+       <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container">
+             <a class="navbar-brand" href="index.html">Milton's tv website</a>
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                 <ul class="navbar-nav mr-auto">
+                   <li class="nav-item">
+                     <a class="nav-link" href="index.html"><i class="fa-solid fa-house-user"></i> Home</a>
+                   </li>
+
+                   <li class="nav-item">
+                     <a class="nav-link" href="index.html">shows</a>
+                   </li>
+
+                   <li class="nav-item">
+                     <a class="nav-link" href="index.html">people</a>
+                   </li>
+
+                   <li class="nav-item">
+                     <a class="nav-link" href="index.html">web channels</a>
+                   </li>
+
+                   <li class="nav-item">
+                     <a class="nav-link" href="index.html">schedule</a>
+                   </li>
+
+                   <li class="nav-item">
+                     <a class="nav-link" href="index.html">calendar</a>
+                   </li>
+
+
+                 </ul>
+             </div>
+          </div>
+       </nav>
+       <div class=”container”></div>
+             <h1>Welcome to MCDS tv</h1>
+             <p>This is an awesome tv website with a variety of entertainment from around the world.</p>
+       </div>
+
+       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
    </body>
 </html>
